create 3 buttons with a e.target

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button id="btn1">rock</button>
+    <button id="btn2">paper</button>
+    <button id="btn3">scissors</button>
+
+    <!--
+
+    <input type="button" id="btn1" value="rock">
+    <input type="button" id="btn2" value="paper">
+    <input type="button" id="btn3" value="scissors">
+
+    -->
+
+
 </body>
 </html>
