--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <button id="btn1">rock</button>
     <button id="btn2">paper</button>
     <button id="btn3">scissors</button>
+    <div>
+        <p id="scoreboard"></p>
+    </div>
 
     <!--
 
