adjust the flexbox system

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Rock-Paper-Scissors</h1>
     <section id="playboard">
         <div class ="buttonbox" id="buttonbox">
             <button class="btn" id="btn1">rock</button>
             <button class="btn" id="btn2">paper</button>
             <button class="btn" id="btn3">scissors</button>
         </div>
-        <div>
-            <ul class="scoreboard" id="scoreboard"></ul>
+        <div class="scoreboard" id="scoreboard">
         </div>
+    <footer>Copyright &copy; João Vitor de Oliveira</footer>
     </section>
 </body>
 </html>
