--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Rock-Paper-Scissors</h1>
+    <h2>Teste</h2>
     <section id="playboard">
         <div class ="buttonbox" id="buttonbox">
             <button class="btn" id="btn1">rock</button>
