add github icon

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="images/x-icon" href="/images/rock-paper-scissors.png">
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>rock-paper-scissors</title>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 </head>
 <body>
     <h1>Rock-Paper-Scissors</h1>
@@ -17,7 +19,10 @@
         </div>
         <div class="scoreboard" id="scoreboard">
         </div>
-    <footer>Copyright &copy; João Vitor de Oliveira</footer>
+    <footer>Copyright &copy; 
+        <a href="https://github.com/Jaoovit">João Vitor de Oliveira
+            <i class='fa fa-github'></i></a>
+    </footer>
     </section>
 </body>
 </html>
