add imagens to the buttons

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>Rock-Paper-Scissors</h1>
     <section id="playboard">
         <div class ="buttonbox" id="buttonbox">
-            <button class="btn" id="btn1">rock</button>
-            <button class="btn" id="btn2">paper</button>
-            <button class="btn" id="btn3">scissors</button>
+            <button class="btn" id="btn1" value="rock"><img class="userchoiceimage" src="/images/rock.png" alt="rock"></button>
+            <button class="btn" id="btn2" value="paper"><img class="userchoiceimage" src="/images/paper.png" alt="paper"></button>
+            <button class="btn" id="btn3" value="scissors"><img class="userchoiceimage" src="images/scissor.png" alt="scissors"></button>
         </div>
         <div class="scoreboard" id="scoreboard">
         </div>
