fix a target userChoice problem

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <h1>Rock-Paper-Scissors</h1>
     <section id="playboard">
         <div class ="buttonbox" id="buttonbox">
-            <button class="btn" id="btn1" value="rock"><img class="userchoiceimage" src="/images/rock.png" alt="rock"></button>
-            <button class="btn" id="btn2" value="paper"><img class="userchoiceimage" src="/images/paper.png" alt="paper"></button>
-            <button class="btn" id="btn3" value="scissors"><img class="userchoiceimage" src="images/scissor.png" alt="scissors"></button>
+            <button class="btn" id="btn1" name="rock"><img class="userchoiceimage" src="/images/rock.png" alt="rock"></button>
+            <button class="btn" id="btn2" name="paper"><img class="userchoiceimage" src="/images/paper.png" alt="paper"></button>
+            <button class="btn" id="btn3" name="scissors"><img class="userchoiceimage" src="images/scissor.png" alt="scissors"></button>
+        </div>
+        <div class="score">
+            <h2 id="player">player: 0</h2>
+            <h2 id="computer">computer: 0</h2>
         </div>
         <div class="scoreboard" id="scoreboard">
         </div>
