create a score area

--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
             <button class="btn" id="btn2" name="paper"><img class="userchoiceimage" src="/images/paper.png" alt="paper"></button>
             <button class="btn" id="btn3" name="scissors"><img class="userchoiceimage" src="images/scissor.png" alt="scissors"></button>
         </div>
-        <div class="score">
-            <h2 id="player">player: 0</h2>
-            <h2 id="computer">computer: 0</h2>
+
+        <div class="scoreboard" id="scoreboard"></div>
+
+    <div class="score">
+        <div class="pointscore">
+            <h2>player</h2>
+            <h2 id="player"></h2>
         </div>
-        <div class="scoreboard" id="scoreboard">
+        <div class="pointscore">
+            <h2>computer</h2>
+            <h2 id="computer"></h2>
         </div>
+    </div>
     <footer>Copyright &copy; 
         <a href="https://github.com/Jaoovit">João Vitor de Oliveira
             <i class='fa fa-github'></i></a>
