create a 5 rounds system

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="score">
         <div class="pointscore">
             <h2>player</h2>
-            <h2 id="player"></h2>
+            <h2 id="player">0</h2>
         </div>
         <div class="pointscore">
             <h2>computer</h2>
-            <h2 id="computer"></h2>
+            <h2 id="computer">0</h2>
         </div>
     </div>
     <footer>Copyright &copy; 
