--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <button class="btn" id="btn2" name="paper"><img class="userchoiceimage" src="/images/paper.png" alt="paper"></button>
             <button class="btn" id="btn3" name="scissors"><img class="userchoiceimage" src="images/scissor.png" alt="scissors"></button>
         </div>
-
+    </section>
+    
         <div class="scoreboard" id="scoreboard"></div>
 
-    <div class="score">
+    <section class="score">
         <div class="pointscore">
             <h2>player</h2>
             <h2 id="player">0</h2>
@@ -29,11 +30,11 @@
             <h2>computer</h2>
             <h2 id="computer">0</h2>
         </div>
-    </div>
+    </section>
     <footer>Copyright &copy; 
         <a href="https://github.com/Jaoovit">João Vitor de Oliveira
             <i class='fa fa-github'></i></a>
     </footer>
-    </section>
+    
 </body>
 </html>
