--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>Rock-Paper-Scissors</h1>
     <section id="playboard">
         <div class ="buttonbox" id="buttonbox">
-            <button class="btn" id="btn1" name="rock"><img class="userchoiceimage" src="/images/rock.png" alt="rock"></button>
-            <button class="btn" id="btn2" name="paper"><img class="userchoiceimage" src="/images/paper.png" alt="paper"></button>
+            <button class="btn" id="btn1" name="rock"><img class="userchoiceimage" src="images/rock.png" alt="rock"></button>
+            <button class="btn" id="btn2" name="paper"><img class="userchoiceimage" src="images/paper.png" alt="paper"></button>
             <button class="btn" id="btn3" name="scissors"><img class="userchoiceimage" src="images/scissor.png" alt="scissors"></button>
         </div>
     </section>
